# citar-cxx

./: CMakeLists.txt  README
cmake/: CXXFlags.cmake  TR1Test.cmake  tr1-test.cpp
include/citar/: config.hh.cmake  cwrap.hh
include/citar/corpus/: BrownCorpusReader.hh  CONLLCorpusReader.hh  CorpusReader.hh
include/citar/tagger/hmm/: BiGram.hh  HMMTagger.hh  LanguageModel.hh  LinearInterpolationSmoothing.hh  Model.hh  Smoothing.hh  TriGram.hh  UniGram.hh
include/citar/tagger/wordhandler/: KnownWordHandler.hh  SuffixWordHandler.hh  WordHandler.hh  WordSuffixTree.hh
include/citar/util/: Markers.hh  NonCopyable.hh  PairSecondGtComp.hh
libcitar/: CMakeLists.txt
libcitar/citar/: cwrap.hh
libcitar/citar/corpus/: BrownCorpusReader.hh  CorpusReader.hh  SentenceHandler.hh  TaggedWord.hh
libcitar/citar/tagger/hmm/: BiGram.hh  HMMTagger.hh  LinearInterpolationSmoothing.hh  Model.hh  Smoothing.hh  TagMatrixEntry.hh  TriGram.hh  UniGram.hh
libcitar/citar/tagger/wordhandler/: KnownWordHandler.hh  SuffixWordHandler.hh  WordHandler.hh  WordSuffixTree.hh
libcitar/citar/utility/: PairSecondGtComp.hh
libcitar/src/corpus/BrownCorpusReader/: BrownCorpusReader.cpp  BrownCorpusReader.ih
libcitar/src/cwrap/: cwrap.cpp  cwrap.ih
libcitar/src/tagger/hmm/HMMTagger/: HMMTagger.cpp  HMMTagger.ih
libcitar/src/tagger/hmm/LinearInterpolationSmoothing/: LinearInterpolationSmoothing.cpp  LinearInterpolationSmoothing.ih
libcitar/src/tagger/hmm/Model/: Model.cpp  Model.ih
libcitar/src/tagger/wordhandler/KnownWordHandler/: KnownWordHandler.cpp  KnownWordHandler.ih
libcitar/src/tagger/wordhandler/SuffixWordHandler/: SuffixWordHandler.cpp  SuffixWordHandler.ih
libcitar/src/tagger/wordhandler/WordSuffixTree/: WordSuffixTree.cpp  WordSuffixTree.ih
models/brown/: README  brown-simplified.lexicon  brown-simplified.ngrams
ruby/: Rakefile  VERSION.yml  citar.gemspec
ruby/lib/: citar.rb
src/corpus/: BrownCorpusReader.cpp  BrownCorpusReaderPrivate.cpp  BrownCorpusReaderPrivate.hh  CONLLCorpusReader.cpp  CONLLCorpusReaderPrivate.cpp  CONLLCorpusReaderPrivate.hh
src/corpus/BrownCorpusReader/: BrownCorpusReader.cpp
src/cwrap/: cwrap.cpp  cwrap.ih
src/tagger/hmm/: HMMTagger.cpp  HMMTaggerPrivate.cpp  HMMTaggerPrivate.hh  LinearInterpolationSmoothing.cpp  LinearInterpolationSmoothingPrivate.cpp  LinearInterpolationSmoothingPrivate.hh  Model.cpp  ModelPrivate.cpp  ModelPrivate.hh  TagMatrixEntry.hh  TrellisEntry.hh
src/tagger/hmm/LinearInterpolationSmoothing/: LinearInterpolationSmoothing.ih
src/tagger/hmm/Model/: Model.ih
src/tagger/wordhandler/: KnownWordHandler.cpp  SuffixWordHandler.cpp  WordSuffixTree.cpp
src/tagger/wordhandler/KnownWordHandler/: KnownWordHandler.cpp
src/tagger/wordhandler/WordSuffixTree/: WordSuffixTree.ih
util/: evaluate.cpp  tag.cpp  train.cpp
